--- a/index.html
+++ b/index.html
@@ -5,20 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refugio Pirulo, hogar para animales</title>
-    <link rel="stylesheet" href="./css/style.css">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
     <header>
-        <!-- Logo -->
-        <a href="#"><img class="logo" src="./medios/logo.png" alt="Logo"></a>
-
         <!-- Menú de navegación -->
-        <nav>
-            <ul>
-                <li><a href="./page/adopcion.html">Adopción</a></li>
-                <li><a href="./page/contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navegacion">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="./page/adopcion.html">Adopción</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="./page/contacto.html">Contacto</a>
+                    </li>
+                </ul>
+                <a class="navbar-brand" href="#">
+                    <img class="logo" src="./medios/logo.png" alt="Logo">
+                </a>
+                <span class="navbar-text">
+                    Refugio Pirulo
+                </span>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -28,21 +47,6 @@
             <h1>Refugio Pirulo</h1>
             <p class="subtitulo">Conocé a tu nuevo mejor amigo</p>
         </section>
-
-        <!-- Sección ayudados -->
-        <section>
-            <h2>Adoptá, no compres</h2>
-            <p>Al momento de elegir un nuevo compañero para tu vida, considerá adoptar en vez de comprar.</p>
-            <p>Entre todos podemos lograr un mundo donde estos animales no tengan que sufrir en la calle.</p>
-
-            <img src="./medios/braus.jpeg" alt="Perro marrón oscuro y claro sonriente llamado Braus.">
-            <img src="./medios/duko.jpeg" alt="Caniche blanco acostado al lado de un gato.">
-            <img src="./medios/oddy.jpeg" alt="Beagle marrón claro con un arnés parado en la playa.">
-            <img src="./medios/dos_naranjas.jpeg" alt="Dos gatos naranjas acostados en una cama.">
-
-            <p>Estos son algunos de los animales a los que pudimos ayudar a encontrar su hogar.</p>
-        </section>
-
 
         <!-- Sección objetivo -->
         <section class="objetivo">
@@ -54,14 +58,57 @@
             la atención y el afecto que merecen de un dueño específico. 
             </p>
         </section>
+
+        <!-- Sección ayudados -->
+        <section>
+            <section class="intro">
+                <h2>Adoptá, no compres</h2>
+                <p>Al momento de elegir un nuevo compañero para tu vida, considerá adoptar en vez de comprar.</p>
+                <p>Entre todos podemos lograr un mundo donde estos animales no tengan que sufrir en la calle.</p>
+            </section>
+
+            <section class="ayudados">
+                <div class="card carta">
+                    <img src="./medios/braus.jpeg" class="card-img-top" alt="Perro marrón oscuro y claro sonriente">
+                    <div class="card-body cuerpoCarta">
+                        <h4 class="card-text tituloCarta">Braus - 2 años</h4>
+                        <p class="card-text descCarta">Adoptado de cachorro, le encanta pasear y ladrarle a las bicicletas que pasan.</p>
+                    </div>
+                </div>
+                <div class="card carta">
+                    <img src="./medios/duko.jpeg" class="card-img-top" alt="Caniche blanco acostado al lado de un gato.">
+                    <div class="card-body cuerpoCarta">
+                        <h4 class="card-text tituloCarta">Duko - 9 años</h4>
+                        <p class="card-text descCarta">Caniche mayor que se adaptó a su nueva familia, muy sociable.</p>
+                    </div>
+                </div>
+                <div class="card carta">
+                    <img src="./medios/oddy.jpeg" class="card-img-top" alt="Beagle marrón claro con un arnés parado en la playa.">
+                    <div class="card-body cuerpoCarta">
+                        <h4 class="card-text tituloCarta">Oddy - 5 años</h4>
+                        <p class="card-text descCarta">Beagle muy activo, su pasatiempo favorito es correr por la playa y meterse al mar.</p>
+                    </div>
+                </div>
+                <div class="card carta">
+                    <img src="./medios/dos_naranjas.jpeg" class="card-img-top" alt="Dos gatos naranjas acostados en una cama.">
+                    <div class="card-body cuerpoCarta">
+                        <h4 class="card-text tituloCarta">Fuego y Llama - 1 año</h4>
+                        <p class="card-text descCarta">Dos gatos naranjas hermanos, adoptados juntos e inseparables.</p>
+                    </div>
+                </div>
+            </section>
+        </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <h4>Seguinos en nuestras redes:</h4>
         <a href="https://www.facebook.com/"><img src="./medios/facebook.png" alt="Logo de facebook"></a>
         <a href="https://www.instagram.com/"><img src="./medios/instagram.png" alt="Logo de instagram"></a>
         <a href="https://www.tiktok.com/"><img src="./medios/tiktok.png" alt="Logo de tiktok"></a>
         <img class="logo" src="./medios/logo.png" alt="logo">
     </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
