--- a/index.html
+++ b/index.html
@@ -16,32 +16,22 @@
 <body>
     <header>
         <!-- Menú de navegación -->
-        <nav class="navbar navbar-expand-lg navegacion">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                    <a class="nav-link" href="#">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="./page/adopcion.html">Adopción</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="./page/contacto.html">Contacto</a>
-                    </li>
-                </ul>
-                <a class="navbar-brand" href="#">
+        <nav class="navegacion">
+            <div class="links">
+                <a href="#">Inicio</a>
+                <a href="./page/adopcion.html">Adopcion</a>
+                <a href="./page/contacto.html">Contacto</a>
+            </div>
+            <div class="areaLogo">
+                <a href="#">
                     <img class="logo" src="./medios/logo.png" alt="Logo">
                 </a>
-                <span class="navbar-text">
-                    Refugio Pirulo
-                </span>
-                </div>
+                <p>Refugio Pirulo</p>
             </div>
         </nav>
     </header>
 
-    <main>
+    <main class="principal">
         <!-- Banner y titulo -->
         <section class="banner">
             <h1>Refugio Pirulo</h1>
