Media queries y cambios varios

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
 
-    <main class="principal">
+    <main class="principal-Index">
         <!-- Banner y titulo -->
         <section class="banner">
             <h1>Refugio Pirulo</h1>
