--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
+    <!-- Animate -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <!-- CSS -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -58,28 +61,28 @@
             </section>
 
             <section class="ayudados">
-                <div class="card carta">
+                <div class="card carta animate__animated animate__fadeInDown">
                     <img src="./medios/braus.jpeg" class="card-img-top" alt="Perro marrón oscuro y claro sonriente">
                     <div class="card-body cuerpoCarta">
                         <h4 class="card-text tituloCarta">Braus - 2 años</h4>
                         <p class="card-text descCarta">Adoptado de cachorro, le encanta pasear y ladrarle a las bicicletas que pasan.</p>
                     </div>
                 </div>
-                <div class="card carta">
+                <div class="card carta animate__animated animate__fadeInDown">
                     <img src="./medios/duko.jpeg" class="card-img-top" alt="Caniche blanco acostado al lado de un gato.">
                     <div class="card-body cuerpoCarta">
                         <h4 class="card-text tituloCarta">Duko - 9 años</h4>
                         <p class="card-text descCarta">Caniche mayor que se adaptó a su nueva familia, muy sociable.</p>
                     </div>
                 </div>
-                <div class="card carta">
+                <div class="card carta animate__animated animate__fadeInDown">
                     <img src="./medios/oddy.jpeg" class="card-img-top" alt="Beagle marrón claro con un arnés parado en la playa.">
                     <div class="card-body cuerpoCarta">
                         <h4 class="card-text tituloCarta">Oddy - 5 años</h4>
                         <p class="card-text descCarta">Beagle muy activo, su pasatiempo favorito es correr por la playa y meterse al mar.</p>
                     </div>
                 </div>
-                <div class="card carta">
+                <div class="card carta animate__animated animate__fadeInDown">
                     <img src="./medios/dos_naranjas.jpeg" class="card-img-top" alt="Dos gatos naranjas acostados en una cama.">
                     <div class="card-body cuerpoCarta">
                         <h4 class="card-text tituloCarta">Fuego y Llama - 1 año</h4>
