--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Refugio Pirulo - Trabajamos todos los días para hacer un mundo mejor para los animales abandonados o sin hogar. Considerá adoptar a tu nuevo mejor amigo.">
+    <meta name="keywords" content="Refugio, Adopcion, Animales">
+    
     <title>Refugio Pirulo, hogar para animales</title>
 
     <!-- Bootstrap -->
@@ -21,13 +24,13 @@
         <!-- Menú de navegación -->
         <nav class="navegacion">
             <div class="links">
-                <a href="#">Inicio</a>
-                <a href="./page/adopcion.html">Adopcion</a>
-                <a href="./page/contacto.html">Contacto</a>
+                <a href="#" title="Refugio Pirulo - Inicio">Inicio</a>
+                <a href="./page/adopcion.html" title="Animales en Adopción">Adopcion</a>
+                <a href="./page/contacto.html" title="Contacto y Sucursal">Contacto</a>
             </div>
             <div class="areaLogo">
                 <a href="#">
-                    <img class="logo" src="./medios/logo.png" alt="Logo">
+                    <img class="logo" src="./medios/logo.png" title="Refugio Pirulo - Inicio" alt="Logo">
                 </a>
                 <p>Refugio Pirulo</p>
             </div>
